# snap_layouts

./: CHANGELOG.md  LICENSE  README-ZH.md  README.md  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: snap_layouts.dart
lib/src/: snap_layouts.dart
lib/src/widgets/: snap_layouts_button.dart  snap_layouts_caption.dart
windows/: CMakeLists.txt  snap_layouts_plugin.cpp
windows/include/snap_layouts/: snap_layouts_plugin.h
